@@ -1,9 +1,9 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r16228-snapshot.jar 2255972 RMD160 1a1fce0db7ac20fcc9143e5b4c2be234ad04aef8 SHA1 8de8f0e9a227df84e1add16a261032d050c5c5b4 SHA256 ea0f2ae4d7fa783a7cfd9c6e0cb9cdcbf06f2f64c673c30a3cc74725f53cafd2
+DIST freenet-r16458-snapshot.jar 2287761 RMD160 8a08ac61da5db46fd26396d3cb51fcb143afcea7 SHA1 60763790b299d7b31078d400291cbe638fc1c29b SHA256 4f9131699c91a18233368ada86a5e109411f2558d7112ee53dd574a8f6c7c1e1
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-bin-0.7.1089.ebuild 2409 RMD160 304a0775fee013b4a0d172e3c8d6a7c420e746e8 SHA1 14506adef6e51a391342c22ce4ae5eb5b0b56269 SHA256 7258b69a4e262638a6cb3128c90dec4dd82693039e1f78ff97d444c1071c4d9e
-MISC ChangeLog 3760 RMD160 49181bbd07f76af34270e84c45fafbbd02d13802 SHA1 e5ccace9979fd7f775b1d9b04f216b7045920f24 SHA256 fcfb9190c352af1be7586ab7ff47029ca9b79e76f201a05b6c14014c105f31c1
+EBUILD freenet-bin-0.7.1090.ebuild 2395 RMD160 6b39ef1f7ab131afe481119c075d3025a6494740 SHA1 20af8599d8f58a63be111f9741a464bbdf63d8f1 SHA256 3c02664fd428d116910f0d0d14d0f85d86df1c6062ee8b9ac1e4184dc1b69997
+MISC ChangeLog 3888 RMD160 c6ac5299480c5035891b51cb848becbf81614676 SHA1 977628f6ef8ca7d113c2d6e4750e922929c57e0d SHA256 68d4b65636bf6324b6bf214936a6c18d23112cd61242ce4713d46b046c093f41
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
