@@ -1,8 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1089.tar.bz2 19128966 RMD160 1a97b64102ccbf3668e7d3084dab2853a234b16b SHA1 5af9fa21379fd6c4eb2daad54ba886a657b88a9e SHA256 9c743feb08d8d58fd661e51c2b655fcd2de60e0361b5652f2137f7848365f996
-DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
-DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
-DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-0.7.1089.ebuild 2170 RMD160 0f7d64216c0c0ed40c97ed7152fec09f0d5f9937 SHA1 85c46206b68aaeb9645d31ddc2624ceb7fd7cfca SHA256 4098d456772729f87c7b131779c1226160985c1ae7505b21072a66d5064d7a56
-MISC ChangeLog 2201 RMD160 3d8e8f335362e59b3307b7a0d690788ae2bc8168 SHA1 fcf17f6b78cd88675206ad9f0a1c14f437475a4c SHA256 2ed12aff6249eddc796e1f94135c3490dcd3fe06aeda377967b37232638af4fc
+DIST freenet-sources-v1090.tar.bz2 19525769 RMD160 bd3b5d4dfc24d683f55cd858e41f9ebc64fa7d5d SHA1 faf5da26023a6ef0cff97f43d45b692a304c038c SHA256 c429f48f78d686fd6b68f152ff8d5a4052d8d5069459196bde707e656f34129a
+EBUILD freenet-0.7.1090.ebuild 1648 RMD160 7cb8638f70d9a6764742da041141caa2beaa200c SHA1 a64e81241e4aba12122f9fc2df95fd8b6a2daafb SHA256 2d2f8c6e975b3c66ac62d751c3f62d8bff1e4fbd091293ffd10637cf4ffe0102
+MISC ChangeLog 2321 RMD160 5c7df02a6e014dafcd2a5867914236cf413187be SHA1 bf554412586edcc61a472dc06ce85124a4b1d13f SHA256 0753d01209a239b973862fc3b4c6b36f8293414d9f111c5c09ec137695f9021b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
